--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
   <h1>hello my friend
   </h1>
-  <p>دي أول صفحة ويب ليك!</p>
+  <p>دي هدية صغيرة من اخوك 😘
+</p>
 
-  <button onclick="changeText()">اضغط هنا</button>
+  <button onclick="changeText()">دوس هنا</button>
 
   <script src="script.js"></script>
   
